@@ -5,6 +5,8 @@ V6.00 (xx.xx.2020)
    of flame-animations has never been easier
  - changed some default settings in regard to flame-animations
  - re-implemented animation-playback in the main editor
+ - new settings in the Preferences for animation preview in the main editor: tinaRenderAnimPreviewQuality (render quality) and tinaRenderAnimPreviewSize (size of preview)
+ - new setting in the Preferences for default state of the animation-controls in the main editor: tinaDefaultAnimationControlsEnabled (per default: true)
  - renamed the "Misc"-tab into "Randomize", moved the "Randomize weighting-fields"-button to this tab, added also a hint-panel
  - added motion curves for the following flame-parameters: balancingRed/Green/Blue, lowDensityBrightness and foregroundOpacity
  - added new property "tinaDefaultFrameCount" to the Preferences, here you can change the default number of frames for a flame-animation,
